Добавление линков на соц сети

--- a/index.html
+++ b/index.html
@@ -38,11 +38,25 @@
 
         <ul class="link nav-flex">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="mail-link"
-              ><span lang="en">info@devstudio.com</span></a
-            >
+            <a href="mailto:info@devstudio.com" class="mail-link">
+              <span lang="en">
+                <svg class="nav-icon-envelope">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </span>
+            </a>
           </li>
-          <li class="item"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="tel:+380961111111" class="tel-link">
+              <sub>
+                <svg class="nav-icon-smartphone">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+              </sub>
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </div>
     </header>
@@ -59,7 +73,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Specific company</h2>
-          <ul class="link flex">
+          <ul class="link about-flex">
             <li class="header-about-list">
               <h3 class="header-about">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="header-about-paragraph">
@@ -91,7 +105,7 @@
       <section class="section work">
         <div class="container">
           <h2 class="header-second">Чим ми займаємося</h2>
-          <ul class="link flex">
+          <ul class="link about-work-flex">
             <li class="header-about-work-list">
               <img src="./images/box1.jpg" alt="Екран і руки на клавіатурі" width="370" />
             </li>
@@ -109,12 +123,42 @@
       <section class="section our-team">
         <div class="container">
           <h2 class="header-second">Наша команда</h2>
-          <ul class="link flex">
+          <ul class="link our-team-flex">
             <li class="our-team-list">
               <img src="./images/imgpd1.jpg" alt="Фотографія продакт дизайнера" width="270" />
               <div class="our-team-item">
                 <h3 class="our-team-name">Ігор Дем'яненко</h3>
                 <p class="our-team-paragraph"><span lang="en">Designer</span></p>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -122,6 +166,36 @@
               <div class="our-team-item">
                 <h3 class="our-team-name">Ольга Рєпіна</h3>
                 <p class="our-team-paragraph"><span lang="en">Frontend Developer</span></p>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -129,6 +203,36 @@
               <div class="our-team-item">
                 <h3 class="our-team-name">Микола Тарасов</h3>
                 <p class="our-team-paragraph"><span lang="en">Marketing</span></p>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list">
@@ -136,8 +240,58 @@
               <div class="our-team-item">
                 <h3 class="our-team-name">Михайло Єрмаков</h3>
                 <p class="our-team-paragraph"><span lang="en">UI Designer</span></p>
+                <ul class="our-team-social-container link">
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-icon-container list">
+                    <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
+                      <svg class="our-team-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Our clients -->
+      <section class="section our-clients">
+        <div class="container">
+          <h2 class="header-second">Постійні клієнти</h2>
+          <ul class="link our-clients-flex">
+            <li class="our-clients-rectangle">
+              <a href="">
+                <svg class="clients-icon">
+                  <use href=""></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-clients-rectangle"></li>
+            <li class="our-clients-rectangle"></li>
+            <li class="our-clients-rectangle"></li>
+            <li class="our-clients-rectangle"></li>
+            <li class="our-clients-rectangle"></li>
           </ul>
         </div>
       </section>
@@ -145,28 +299,65 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-ft"
-          ><span lang="en">Web</span><span lang="en" class="logo-part-ft">Studio</span></a
-        >
-        <address id="contacts" class="ft-address">
-          <ul class="link">
-            <li class="li-ft">
-              <a
-                href="https://goo.gl/maps/rEXAgXgdKfEQJtbBA?coh=178573&amp;entry=tt"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="address-link-ft"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="li-ft">
-              <a href="mailto:info@devstudio.com" class="mail-link-ft"
-                ><span lang="en">info@devstudio.com</span></a
-              >
-            </li>
-            <li><a href="tel:+380961111111" class="tel-link-ft">+38 096 111 11 11</a></li>
-          </ul>
-        </address>
+        <div class="ft-container">
+          <div class="ft-left-side-container">
+            <a href="./index.html" class="logo-ft"
+              ><span lang="en">Web</span><span lang="en" class="logo-part-ft">Studio</span></a
+            >
+            <address id="contacts" class="ft-address">
+              <ul class="link">
+                <li class="li-ft">
+                  <a
+                    href="https://goo.gl/maps/rEXAgXgdKfEQJtbBA?coh=178573&amp;entry=tt"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="address-link-ft"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="li-ft">
+                  <a href="mailto:info@devstudio.com" class="mail-link-ft"
+                    ><span lang="en">info@devstudio.com</span></a
+                  >
+                </li>
+                <li><a href="tel:+380961111111" class="tel-link-ft">+38 096 111 11 11</a></li>
+              </ul>
+            </address>
+          </div>
+          <div>
+            <h2 class="ft-header-social"><sub>приєднуйтесь</sub></h2>
+            <ul class="link ft-social-container">
+              <li class="ft-icon-container list">
+                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="ft-icon">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ft-icon-container list">
+                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="ft-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ft-icon-container list">
+                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="ft-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ft-icon-container list">
+                <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
+                  <svg class="ft-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
