Оформление иконок и декоративных эффектов

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <div class="container nav-flex">
         <div class="logo-nav-flex">
           <a href="./index.html" class="logo"
-            ><span lang="en">Web</span><span lang="en" class="logo-part">Studio</span></a
-          >
+            ><span lang="en">Web</span><span lang="en" class="logo-part">Studio</span>
+          </a>
           <nav>
-            <ul class="link nav-flex">
+            <ul class="nav-flex link">
               <li class="item current-page"><a href="#" class="nav-link">Студія</a></li>
               <li class="item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
               <li class="item"><a href="#contacts" class="nav-link">Контакти</a></li>
@@ -39,9 +39,9 @@
         <ul class="link nav-flex">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="mail-link">
-              <span lang="en">
-                <svg class="nav-icon-envelope">
-                  <use href="./images/sprite.svg#icon-envelope"></use>
+              <span lang="en" class="nav-icon-item">
+                <svg class="nav-icon-envelope" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
               </span>
@@ -50,8 +50,8 @@
           <li class="item">
             <a href="tel:+380961111111" class="tel-link">
               <sub>
-                <svg class="nav-icon-smartphone">
-                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                <svg class="nav-icon-smartphone" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
               </sub>
               +38 096 111 11 11
@@ -62,11 +62,12 @@
     </header>
     <main>
       <!-- HERO -->
-      <section class="section-bg-hero">
-        <div class="container">
+      <section class="section-bg-hero bg-hero">
+        <div class="">
+        <div class=" container">
           <h1 class="header-hero">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="button-service">Замовити послугу</button>
-        </div>
+        </div></div>
       </section>
 
       <!--About-->
@@ -75,24 +76,44 @@
           <h2 class="visually-hidden">Specific company</h2>
           <ul class="link about-flex">
             <li class="header-about-list">
+              <div class="header-about-container">
+                <svg class="header-about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="header-about">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="header-about-paragraph">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="header-about-list">
+              <div class="header-about-container">
+                <svg class="header-about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="header-about">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="header-about-paragraph">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="header-about-list">
+              <div class="header-about-container">
+                <svg class="header-about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="header-about">ПЛАНУВАННЯ</h3>
               <p class="header-about-paragraph">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="header-about-list">
+              <div class="header-about-container">
+                <svg class="header-about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="header-about">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="header-about-paragraph">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -132,29 +153,29 @@
                 <ul class="our-team-social-container link">
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -169,29 +190,29 @@
                 <ul class="our-team-social-container link">
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -206,29 +227,29 @@
                 <ul class="our-team-social-container link">
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -243,29 +264,29 @@
                 <ul class="our-team-social-container link">
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-icon-container list">
                     <a href="" class="our-team-icon-link" target="_blank" rel="noopener noreferrer">
-                      <svg class="our-team-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="our-team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -281,17 +302,47 @@
           <h2 class="header-second">Постійні клієнти</h2>
           <ul class="link our-clients-flex">
             <li class="our-clients-rectangle">
-              <a href="">
-                <svg class="clients-icon">
-                  <use href=""></use>
+              <a href="" class="our-clients-link" target="_blank" rel="noopener noreferrer">
+                <svg class="our-clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="our-clients-rectangle"></li>
-            <li class="our-clients-rectangle"></li>
-            <li class="our-clients-rectangle"></li>
-            <li class="our-clients-rectangle"></li>
-            <li class="our-clients-rectangle"></li>
+            <li class="our-clients-rectangle">
+              <a href="" class="our-clients-link" target="_blank" rel="noopener noreferrer">
+                <svg class="our-clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-clients-rectangle">
+              <a href="" class="our-clients-link" target="_blank" rel="noopener noreferrer">
+                <svg class="our-clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-clients-rectangle">
+              <a href="" class="our-clients-link" target="_blank" rel="noopener noreferrer">
+                <svg class="our-clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-clients-rectangle">
+              <a href="" class="our-clients-link" target="_blank" rel="noopener noreferrer">
+                <svg class="our-clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-clients-rectangle">
+              <a href="" class="our-clients-link" target="_blank" rel="noopener noreferrer">
+                <svg class="our-clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-6"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -302,8 +353,8 @@
         <div class="ft-container">
           <div class="ft-left-side-container">
             <a href="./index.html" class="logo-ft"
-              ><span lang="en">Web</span><span lang="en" class="logo-part-ft">Studio</span></a
-            >
+              ><span lang="en">Web</span><span lang="en" class="logo-part-ft">Studio</span>
+            </a>
             <address id="contacts" class="ft-address">
               <ul class="link">
                 <li class="li-ft">
@@ -312,13 +363,13 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="address-link-ft"
-                    >м. Київ, пр-т Лесі Українки, 26</a
-                  >
+                    >м. Київ, пр-т Лесі Українки, 26
+                  </a>
                 </li>
                 <li class="li-ft">
                   <a href="mailto:info@devstudio.com" class="mail-link-ft"
-                    ><span lang="en">info@devstudio.com</span></a
-                  >
+                    ><span lang="en">info@devstudio.com</span>
+                  </a>
                 </li>
                 <li><a href="tel:+380961111111" class="tel-link-ft">+38 096 111 11 11</a></li>
               </ul>
@@ -329,29 +380,29 @@
             <ul class="link ft-social-container">
               <li class="ft-icon-container list">
                 <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  <svg class="ft-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="ft-icon-container list">
                 <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  <svg class="ft-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="ft-icon-container list">
                 <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  <svg class="ft-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="ft-icon-container list">
                 <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
-                  <svg class="ft-icon">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <svg class="ft-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
