--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
       <!-- HERO -->
       <section class="section-bg-hero bg-hero">
         <div class="">
-        <div class=" container">
-          <h1 class="header-hero">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="button-service">Замовити послугу</button>
-        </div></div>
+          <div class="container">
+            <h1 class="header-hero">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="button-service">Замовити послугу</button>
+          </div>
+        </div>
       </section>
 
       <!--About-->
